# awkward-xaod-bridge

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
docs/: conf.py
src/: main.cpp
src/awkward_xaod_bridge/: __init__.py  _version.py
tests/: test_package.py
