[metadata]
name = awkward_xaod_bridge
description = A bridge between C++ xAOD and awkward arrays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukasheinrich/awkward-xaod-bridge
author = Lukas Heinrich
author_email = lukas.heinrich@cern.ch
maintainer = Lukas Heinrich
maintainer_email = lukas.heinrich@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://awkward_xaod_bridge.readthedocs.io/
    Bug Tracker = https://github.com/lukasheinrich/awkward-xaod-bridge/issues
    Discussions = https://github.com/lukasheinrich/awkward-xaod-bridge/discussions
    Changelog = https://github.com/lukasheinrich/awkward-xaod-bridge/releases

[options]
packages = find:
install_requires =
    numpy>=1.13.3
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=4.6
docs =
    Sphinx>=3.0.0
    myst_parser>=0.13
    sphinx-book-theme>=0.0.33
    sphinx_copybutton
test =
    pytest>=4.6

[tool:pytest]
addopts = -ra -Wd
testpaths =
    tests

[check-manifest]
ignore =
    .github/**
    docs/**
    .pre-commit-config.yaml
    .readthedocs.yml
    src/*/_version.py

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-numpy]
ignore_missing_imports = True
